<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/latitud"
        android:visibility="gone"
        android:textColor="@color/black"
        android:text="latitud" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/longitud"
        android:visibility="gone"
        android:textColor="@color/black"
        android:text="longitud" />

    <ImageButton
        android:id="@+id/btnCancelarRegistro"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/regresarflecha"
        android:text="@string/btnCancelarRegistro"
        app:backgroundTint="@color/black"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/about"
        android:clickable="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/user"
        android:layout_gravity="center"
        android:focusable="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
            android:id="@+id/campoTelefono"
            android:layout_width="match_parent"
            android:autofillHints="UsuarioRegistro"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/caja_texto_circular"
            android:hint="Número de teléfono"
            android:inputType="number"
            android:padding="12sp"
            android:textColor="@color/black"
            android:textColorHint="#9F807E7E"
            android:textSize="13sp" />

            <TextView
                android:layout_marginStart="55dp"
                android:id="@+id/errorNumber"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/campoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:autofillHints="NombreRegistro"
            android:background="@drawable/caja_texto_circular"
            android:hint="@string/tvNombreRegistro"
            android:inputType="textPersonName|textCapWords"
            android:padding="12sp"
            android:textColor="@color/black"
            android:textColorHint="#9F807E7E"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/campoDui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:autofillHints="NombreRegistro"
            android:background="@drawable/caja_texto_circular"
            android:hint="DUI"
            android:inputType="number"
            android:padding="12sp"
            android:textColor="@color/black"
            android:textColorHint="#9F807E7E"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/caja_texto_circular"
            android:clickable="true"
            android:focusable="false"
            android:hint="Fecha de nacimiento"
            android:inputType="date"
            android:maxLines="1"
            android:padding="12sp"
            android:textColor="@color/black"
            android:textColorHint="#9F807E7E"
            android:textSize="13sp"
            tools:ignore="TextViewEdits" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/campoEdad"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="8dp"
                android:autofillHints="EdadRegistro"
                android:background="@drawable/caja_texto_circular"
                android:hint="Años"
                android:inputType="number"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="#9F807E7E"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/campoMeses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:autofillHints="EdadRegistro"
                android:background="@drawable/caja_texto_circular"
                android:hint="Meses"
                android:inputType="number"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="#9F807E7E"
                android:textSize="13sp" />

        </LinearLayout>

            <TextView
                android:id="@+id/errorEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rgSexo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMasculino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:text="@string/rbMaculino"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/black"
                        app:buttonTint="@color/black" />

                    <RadioButton
                        android:id="@+id/rbFemenino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/rbFemenino"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/black"
                        app:buttonTint="@color/black" />

                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/campoPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="12dp"
                android:autofillHints="ContraseñaRegistro"
                android:background="@drawable/caja_texto_circular"
                android:hint="@string/tvPasswordRegistro"
                android:inputType="textPassword"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="#9F807E7E"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/campoPassRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="8dp"
                android:autofillHints="RepetirContraseña"
                android:background="@drawable/caja_texto_circular"
                android:hint="@string/tvPasswordRepeatRegistro"
                android:inputType="textPassword"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="#9F807E7E"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/errorPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"/>

            <EditText
                android:id="@+id/campoDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/caja_texto_circular"
                android:hint="Dirección (Opcional)"
                android:textColor="@color/black"
                android:textColorHint="#9F807E7E"
                android:textSize="13sp"
                android:layout_marginTop="5dp"
                android:padding="12sp"
                android:autofillHints="TODO"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/DirectMaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/caja_texto_circular"
                android:text="AGREGAR DIRECCIÓN DESDE MAPS (OPCIONAL)"
                android:textStyle="bold"
                android:padding="10dp"
                android:drawableEnd="@drawable/maps"
                app:backgroundTint="@color/bg_fingerprint" />

            <EditText
                android:id="@+id/campoEmail"
                android:layout_width="match_parent"
                android:layout_marginEnd="60dp"
                android:autofillHints="EmailRegistro"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/caja_texto_circular"
                android:hint="@string/tvEmailRegistro"
                android:inputType="textEmailAddress"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="#9F807E7E"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnRegistrarUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/boton_circular"
                android:text="@string/btnRegistrarme"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:backgroundTint="#4CAF50" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>